# alephbet

./: .gitignore  A1-AUTHORS  A1-THANKS  AB-AUTHORS  Dockerfile.hub  Makefile.am  README.md  authors-update.lua  configure.ac  dist-check.sh  meson.build  vcpkg-configuration.json  vcpkg.json
Source_Files/: Makefile.am  main.cpp  shell.cpp  shell.h  shell_misc.cpp  shell_options.cpp  shell_options.h
Source_Files/CSeries/: BStream.cpp  FilmProfile.cpp  FilmProfile.h  Makefile.am  byte_swapping.cpp  byte_swapping.h  csalerts.h  csalerts.mm  csalerts_sdl.cpp  cscluts.h  cscluts_sdl.cpp  csdialogs.h  csdialogs_sdl.cpp  cseries.h  csfonts.h  csmacros.h  csmisc.h  csmisc_sdl.cpp  cspaths.h  cspaths.mm  cspaths_sdl.cpp  cspixels.h  csstrings.cpp  csstrings.h  cstypes.h  mytm.h  mytm_sdl.cpp
Source_Files/FFmpeg/: Makefile.am  Movie.cpp  Movie.h  SDL_ffmpeg.h
Source_Files/Files/: FileHandler.cpp  FileHandler.h  Makefile.am  Packing.cpp  Packing.h  SDL_rwops_ostream.cpp  SDL_rwops_ostream.h  WadImageCache.cpp  WadImageCache.h  crc.cpp  crc.h  extensions.h  find_files.h  find_files_sdl.cpp  game_wad.cpp  game_wad.h  import_definitions.cpp  preprocess_map_sdl.cpp  preprocess_map_shared.cpp  resource_manager.cpp  resource_manager.h  tags.h  wad.cpp  wad.h  wad_prefs.cpp  wad_prefs.h  wad_sdl.cpp
Source_Files/GameWorld/: Makefile.am  TickBasedCircularQueue.h  devices.cpp  dynamic_limits.cpp  dynamic_limits.h  editor.h  effect_definitions.h  effects.cpp  effects.h  ephemera.cpp  ephemera.h  flood_map.cpp  flood_map.h  interpolated_world.cpp  interpolated_world.h  item_definitions.h  items.cpp  items.h  lightsource.cpp  lightsource.h  map.cpp  map.h  map_constructors.cpp  marathon2.cpp  media.cpp  media.h  media_definitions.h  monster_definitions.h  monsters.cpp  monsters.h  pathfinding.cpp  physics.cpp  physics_models.h  placement.cpp  platform_definitions.h  platforms.cpp  platforms.h  player.cpp  player.h  projectile_definitions.h  (+10 more)
Source_Files/Input/: Makefile.am  joystick.h  joystick_sdl.cpp  mouse.h  mouse_sdl.cpp
Source_Files/Lua/: Makefile.am  lua_ephemera.cpp  lua_ephemera.h  lua_hud_objects.cpp  lua_hud_objects.h  lua_hud_script.cpp  lua_hud_script.h  lua_map.cpp  lua_map.h  lua_mnemonics.h  lua_monsters.cpp  lua_monsters.h  lua_music.cpp  lua_music.h  lua_objects.cpp  lua_objects.h  lua_player.cpp  lua_player.h  lua_projectiles.cpp  lua_projectiles.h  lua_saved_objects.cpp  lua_saved_objects.h  lua_script.cpp  lua_script.h  lua_serialize.cpp  lua_serialize.h  lua_templates.h
Source_Files/Misc/: ActionQueues.cpp  ActionQueues.h  CircularByteBuffer.cpp  CircularByteBuffer.h  CircularQueue.h  Console.cpp  Console.h  DefaultStringSets.cpp  DefaultStringSets.h  LockfreeSPSCQueue.h  Logging.cpp  Logging.h  Makefile.am  PlayerImage_sdl.cpp  PlayerImage_sdl.h  PlayerName.cpp  PlayerName.h  Random.h  Scenario.cpp  Scenario.h  Statistics.cpp  VecOps.h  WindowedNthElementFinder.h  a1-authors.h  ab-authors.h  alephversion.h  binders.h  game_errors.cpp  game_errors.h  interface.cpp  interface.h  interface_menus.h  key_definitions.h  powered_by_alephbet.h  powered_by_alephbet_h.h  powered_by_alephone.h  powered_by_alephone_h.h  preference_dialogs.cpp  preference_dialogs.h  preferences.cpp  (+19 more)
Source_Files/ModelView/: Dim3_Loader.cpp  Dim3_Loader.h  Makefile.am  Model3D.cpp  Model3D.h  ModelRenderer.cpp  ModelRenderer.h  StudioLoader.cpp  StudioLoader.h  WavefrontLoader.cpp  WavefrontLoader.h
Source_Files/Network/: ConnectPool.cpp  ConnectPool.h  Makefile.am  NetworkGameProtocol.h  PortForward.cpp  PortForward.h  RingGameProtocol.cpp  RingGameProtocol.h  SDL_netx.h  StarGameProtocol.cpp  StarGameProtocol.h  Update.cpp  Update.h  network.cpp  network.h  network_capabilities.cpp  network_capabilities.h  network_data_formats.cpp  network_data_formats.h  network_dialog_widgets_sdl.cpp  network_dialog_widgets_sdl.h  network_dialogs.cpp  network_dialogs.h  network_distribution_types.h  network_dummy.cpp  network_games.cpp  network_games.h  network_lookup_sdl.cpp  network_lookup_sdl.h  network_messages.cpp  network_messages.h  network_private.h  network_star.h  network_star_hub.cpp  network_star_spoke.cpp  network_udp.cpp
Source_Files/RenderMain/: AnimatedTextures.cpp  AnimatedTextures.h  Crosshairs.h  Crosshairs_SDL.cpp  DDS.h  ImageLoader.h  ImageLoader_SDL.cpp  ImageLoader_Shared.cpp  Makefile.am  OGL_FBO.cpp  OGL_FBO.h  OGL_Faders.cpp  OGL_Faders.h  OGL_Headers.h  OGL_Model_Def.cpp  OGL_Model_Def.h  OGL_Render.cpp  OGL_Render.h  OGL_Setup.cpp  OGL_Setup.h  OGL_Shader.cpp  OGL_Shader.h  OGL_Subst_Texture_Def.cpp  OGL_Subst_Texture_Def.h  OGL_Texture_Def.h  OGL_Textures.cpp  OGL_Textures.h  Rasterizer.h  Rasterizer_OGL.h  Rasterizer_SW.h  Rasterizer_Shader.cpp  Rasterizer_Shader.h  RenderPlaceObjs.cpp  RenderPlaceObjs.h  RenderRasterize.cpp  RenderRasterize.h  RenderRasterize_Shader.cpp  RenderRasterize_Shader.h  RenderSortPoly.cpp  RenderSortPoly.h  (+16 more)
Source_Files/RenderOther/: ChaseCam.cpp  ChaseCam.h  FontHandler.cpp  FontHandler.h  HUDRenderer.cpp  HUDRenderer.h  HUDRenderer_Lua.cpp  HUDRenderer_Lua.h  HUDRenderer_OGL.cpp  HUDRenderer_OGL.h  HUDRenderer_SW.cpp  HUDRenderer_SW.h  IMG_savepng.h  Image_Blitter.cpp  Image_Blitter.h  Makefile.am  OGL_Blitter.cpp  OGL_Blitter.h  OGL_LoadScreen.cpp  OGL_LoadScreen.h  OverheadMapRenderer.cpp  OverheadMapRenderer.h  OverheadMap_OGL.cpp  OverheadMap_OGL.h  OverheadMap_SDL.cpp  OverheadMap_SDL.h  Shape_Blitter.cpp  Shape_Blitter.h  TextLayoutHelper.cpp  TextLayoutHelper.h  TextStrings.cpp  TextStrings.h  ViewControl.cpp  ViewControl.h  computer_interface.cpp  computer_interface.h  fades.cpp  fades.h  game_window.cpp  game_window.h  (+16 more)
Source_Files/Sound/: AudioPlayer.cpp  AudioPlayer.h  Decoder.cpp  Decoder.h  FFmpegDecoder.cpp  FFmpegDecoder.h  Makefile.am  Music.cpp  Music.h  MusicPlayer.cpp  MusicPlayer.h  OpenALManager.cpp  OpenALManager.h  ReplacementSounds.cpp  ReplacementSounds.h  SndfileDecoder.cpp  SndfileDecoder.h  SoundFile.cpp  SoundFile.h  SoundManager.cpp  SoundManager.h  SoundManagerEnums.h  SoundPlayer.cpp  SoundPlayer.h  StreamPlayer.cpp  (+3 more)
(+498 files in other folders)
